[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oorcas"
version = "0.0.3"
description = "Generate OOI-RCA spectograms in the cloud"
authors = [
  { name = "RCA Data Team", email = "jduprey@uw.edu" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "loguru",
    "matplotlib",
    "s3fs",
    "ooipy @ git+https://github.com/Ocean-Data-Lab/ooipy.git@main"
]
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["oorcas"]

[tool.hatch.metadata]
allow-direct-references = true


